--- a/index.html
+++ b/index.html
@@ -75,16 +75,11 @@
       <thead>
         <tr>
           <th class="border border-slate-500 py-1 px-3">No</th>
-          <th class="border border-slate-500 py-1 px-3">Kecamatan</th>
+          <th class="border border-slate-500 py-1 px-3">Kota/Kabupaten</th>
           <th class="border border-slate-500 py-1 px-3">Nilai</th>
         </tr>
       </thead>
       <tbody id="hasil">
-        <!-- Dummy data -->
-        <tr>
-          <td class="border border-slate-500 py-1 px-3">1</td>
-          <td class="border border-slate-500 py-1 px-3">Jatinangor</td>
-          <td class="border border-slate-500 py-1 px-3">0.5</td>
       </tbody>
     </table>
 </body>
